<resources>
    <string name="app_name" translatable="false">Lab RPL Unhas</string>
    <string name="name_icon">Email Icon</string>
    <string name="prompt_email" translatable="false">example@student.unhas.ac.id</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="your_name_belong_here" translatable="false">Joni Bin Jono</string>
    <string name="write_down_your_nim" translatable="false">H13116000</string>
    <string name="action_sign_in_short" translatable="false">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_respond">Respond</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="dummy_nim" translatable="false">H13116xxx</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_respon">Choose Respon</string>
    <string name="chapter_i">Chapter I</string>
    <string name="chapter_ii">Chapter II</string>
    <string name="chapter_iii">Chapter III</string>
    <string name="chapter_iv">Chapter IV</string>
    <string name="chapter_v">Chapter V</string>
    <string name="chapter_vi">Chapter VI</string>
    <string name="chapter_vii">Chapter VII</string>
    <string name="chapter_viii">Chapter VIII</string>
    <string name="register">Register</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="dummy_task">bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</string>
    <string name="answer">Answer</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="your_score">Your Score</string>
    <string name="dummy_score" translatable="false">0</string>
    <string name="dummy_total" translatable="false">10</string>
    <string name="dummy_real_score" translatable="false">69</string>
    <string name="home">Home</string>
    <string name="dummy_timer" translatable="false">00:00</string>
    <string name="start">Start</string>
    <string name="time_remaining">Time remaining</string>
    <string name="nickname">Nickname…</string>
    <string name="full_name">Full name…</string>
    <string name="nim" translatable="false">NIM…</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_user">Me</string>
    <string name="edit">Edit</string>
    <string name="dummy_nickname" translatable="false">Joni</string>
    <string name="dummy_gender">Unknown</string>
    <string name="credits">By CSSC Unhas</string>
    <string name="pbo_chapter_one">Object dan Class</string>
    <string name="pbo_chapter_two">Attribute, Behaviour and Constructor</string>
    <string name="pbo_chapter_three">Encapsulation</string>
    <string name="pbo_chapter_four">Inheritance</string>
    <string name="pbo_chapter_five">Abstract Class and Interface</string>
    <string name="pbo_chapter_six">Polymorphism</string>
    <string name="pbo_chapter_seven">Thread</string>
    <string name="pbo_chapter_eight">JavaFX</string>
    <string name="pp_chapter_one">Operator and Data Type</string>
    <string name="pp_chapter_two">Conditional Statement</string>
    <string name="pp_chapter_three">Loop Statement</string>
    <string name="pp_chapter_four">Array</string>
    <string name="pp_chapter_five">Method</string>
    <string name="pp_chapter_six">String Manipulation</string>
    <string name="pp_chapter_seven">Exception</string>
    <string name="pp_chapter_eight">Input and Output File</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="prompt_gender">Gender</string>
    <string name="close">Close</string>
    <string name="please_wait">Please wait…</string>
    <string name="required">Required</string>
    <string name="nickname_required">Nickname cannot contain Space</string>
    <string name="profile_saved">Profile saved</string>
    <string name="password_confirmation">Password wont be null</string>
    <string name="password_confirmation_txt">Password Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="saving_change">Saving changes…</string>
    <string name="select_photo_gallery">Select photo from gallery</string>
    <string name="capture_photo_camera">Capture photo from camera</string>
    <string name="verify_email_prompt">Please verify your email first.</string>
    <string name="email_is_not_verified_yet">Email is not verified yet.</string>
    <string name="press_back_exit">Press back again to exit</string>
    <string name="basic_programming_prompt">Basic Programming</string>
    <string name="object_oriented_prompt">Object Oriented Programming</string>
    <string name="logout_confirmation">Are you sure want to logout?</string>
    <string name="failed_create_user_email">Failed create user, there is already user with this email:</string>
    <string name="not_same">Not same.</string>
    <string name="its_not_valid_email">It\'s not a valid email</string>
    <string name="result_pbo">PBO score</string>
    <string name="result_pp">PP Score</string>
    <string name="select_an_action">Select an action</string>
    <string name="click_to_view">Click to view…</string>
    <string name="participants_doesn_t_exist">Participant doesn\'t exist</string>
    <string name="chapter">Chapter</string>
    <string name="attempt_prompt">Try</string>
    <string name="score_prompt">Score</string>
    <string name="your_new_email">Your new email</string>
    <string name="password_confirm_text">Input password to confirm</string>
    <string name="email_changed">Email changed.</string>
    <string name="try_again">Error. Try again</string>
    <string name="old_password">Old password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_password">New password</string>
    <string name="password_change">Password changed.</string>
    <string name="score_review">Score Review</string>
    <string name="change_email_confirmation">Email change confirmation</string>
    <string name="change_email_alert_message">You need to re-verification your email again once it change. Continue?</string>
    <string name="continue_text">I don\'t care, continue.</string>
    <string name="change_password_alert_message">Are you sure want to change your password?</string>
    <string name="change_password_confirmation">Password change confirmation</string>
    <string name="wrong_password">Wrong password</string>
    <string name="click_go_email">Click to go to email</string>
    <string name="select_mail_app">Select Mail App</string>
    <string name="error_existed_user">Error, there is another user using this UID. Contact Administrator</string>
    <string name="success_register">Successful registered.</string>
    <string name="connection_error_prompt">Connection error. Try again.</string>
    <string name="cancel_register">Canceled register.</string>
    <string name="cancel_register_message">Cancelling this progress may affect to deleting your current account. Continue?</string>
    <string name="reset_password_message">Are you sure you want to reset your password?</string>
    <string name="reset_password_confirmation_prompt">Reset password confirmation sent. Please check your inbox:</string>
    <string name="class_confirmation_prompt">Are you sure you want to register to this class?</string>
    <string name="class_error_enter_message">You have to register on this class first before entering the exam.</string>
    <string name="cant_enter_without_key">Can\'t enter without key</string>
    <string name="chapter_key_hint">Chapter key…</string>
    <string name="enter">Enter</string>
    <string name="enter_key_to_continue">Enter key to continue</string>
    <string name="exam_lock_answer_alert">"Do you want to lock your current answer?\n\nYou can't change your answer later,\nchoose wisely. \n \n "</string>
    <string name="exam_anwer_required_alert">You have to answer this question first before facing the next question.</string>
    <string name="exam_question_isnt_loaded_alert">Please wait till the question loaded.</string>
    <string name="exam_no_question_alert">There is no such exam. Try again next time.</string>
    <string name="question_prompt">Question</string>
    <string name="exam_exit_alert">"Exiting will going to end this exam and your score will be taken even if you didn't finished yet.\n\nContinue?\n"</string>
    <string name="account_prompt">Account</string>
    <string name="user_prompt" translatable="false">User</string>
    <string name="change_language">Change Language</string>
    <string name="view_profile_prompt">View Profile</string>
    <string name="backslash_text" translatable="false">/</string>
    <string name="edit_profile_small">Edit profile</string>
    <string name="other_prompt">Others</string>
    <string name="app_version_prompt">App version</string>
    <string name="info_app">If any bug or error, please send report to my email.\n\nEnjoy it.</string>
    <string name="my_email" translatable="false">marfiandhiputra@gmail.com</string>
    <string name="got_it">Got It</string>
    <string name="image_saved">Image saved.</string>
    <string name="view_image">View image</string>
    <string name="tap_to_view">Tap to view image</string>
    <string name="failed_save">Failed save image</string>
    <string name="image_not_found">Image not found.</string>
    <string name="news_image_desc">News Image</string>
    <string name="news_empty_prompt">There is no news.</string>
    <string name="ellipsis_char" translatable="false">...</string>
    <string name="see_more">See more</string>
    <string name="prompt_all">All</string>
    <string name="prompt_general" translatable="false">General</string>
    <string name="prompt_pbo" translatable="false">PBO</string>
    <string name="prompt_pp" translatable="false">PP</string>
    <string name="prompt_profile">Profile</string>
    <string name="please_enable_storage_permission">Please enable storage permission.</string>
    <string name="search_prompt">Search</string>
    <string name="search_hint">Search…</string>
    <string name="wrong_key">Wrong key.</string>
    <string name="alert_message_confirmation_exam">After you enter the exam, you will force to finish it and the first score will automatically saved to database.</string>
</resources>
