<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        tools:context=".view.exam.ScoreActivity">

    <TextView
            android:id="@+id/txt_your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/your_score"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/colorWhite"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/txt_count_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:text="@string/dummy_score"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@android:color/holo_green_light"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:text="/"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"/>

        <TextView
                android:id="@+id/txt_count_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:text="@string/dummy_total"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"/>

    </LinearLayout>

    <TextView
            android:id="@+id/txt_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dummy_real_score"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="100sp"/>

    <Button
            android:id="@+id/btn_home"
            android:layout_marginTop="16dp"
            style="@style/AppTheme.CustomButton"
            android:foreground="@drawable/ripple_rounded"
            android:backgroundTint="@android:color/holo_blue_light"
            android:layout_width="match_parent"
            android:text="@string/home"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

</LinearLayout>