<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:id="@+id/user_main_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.profile.UserActivity"
        android:background="@color/colorBlack">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
                android:id="@+id/user_profile_group"
                android:foreground="@drawable/ripple"
                android:contextClickable="true"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp">

            <LinearLayout
                    android:background="@color/colorBackground"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_pic"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@color/colorBlack"
                        app:civ_circle_background_color="@color/colorBlack"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:contentDescription="@string/nav_header_desc"/>

                <TextView
                        android:id="@+id/user_display_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/your_name_belong_here"/>

                <TextView
                        android:id="@+id/user_nim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/dummy_nim"/>

                <TextView
                        android:id="@+id/user_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/prompt_email"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/colorGrey"
                        android:textSize="16sp"
                        android:text="@string/view_profile_prompt"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
                android:id="@+id/user_data_group"
                android:background="@color/colorBackground"
                android:layout_below="@id/user_profile_group"
                android:contextClickable="true"
                android:clickable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="2dp"
                android:focusable="true">

            <Button
                    android:id="@+id/user_result_pbo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.CustomButtonBorderless"
                    android:foreground="@drawable/ripple"
                    android:text="@string/result_pbo"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"/>

            <Button
                    android:id="@+id/user_result_pp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.CustomButtonBorderless"
                    android:foreground="@drawable/ripple"
                    android:text="@string/result_pp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/user_utilities_group"
                android:background="@color/colorBackground"
                android:layout_below="@id/user_data_group"
                android:contextClickable="true"
                android:clickable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:elevation="2dp"
                android:focusable="true">

            <Button
                    android:id="@+id/user_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.CustomButtonBorderless"
                    android:foreground="@drawable/ripple"
                    android:text="@string/action_settings"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"/>

        </LinearLayout>

        <Button
                android:id="@+id/user_edit"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textSize="16sp"
                android:foreground="@drawable/ripple_oval"
                android:background="@color/colorTransparent"
                android:textColor="@color/colorGrey"
                android:textAllCaps="false"/>

    </RelativeLayout>

</ScrollView>