<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="64dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:src="@color/colorBlack"
                app:civ_circle_background_color="@color/colorBlack"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorWhite"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:contentDescription="@string/nav_header_desc"
                android:id="@+id/profile_photo_view"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/name_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/nav_header_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                    android:id="@+id/nim_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_nim"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_subtitle"
                    android:id="@+id/email_view"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
