<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/result_content"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_color"
        android:backgroundTint="@color/colorBackground"
        android:foreground="@drawable/ripple_rounded"
        android:focusable="true"
        android:clickable="true"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_marginBottom="4dp">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/score_pic"
            android:layout_centerVertical="true"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:src="@color/colorBlack"
            app:civ_circle_background_color="@color/colorBlack"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorWhite"
            android:scaleType="centerCrop"
            android:contentDescription="@string/nav_header_desc"/>

    <LinearLayout
            android:id="@+id/linear_result"
            android:orientation="vertical"
            android:layout_toEndOf="@id/score_pic"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/score_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorWhite"
                android:text="@string/nav_header_title"/>

        <TextView
                android:id="@+id/score_nim_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/dummy_nim"/>

    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_result"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:text="@string/click_to_view"
            android:textColor="@color/colorLightGrey"
            tools:ignore="RelativeOverlap"/>

</RelativeLayout>